--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <span>PHARRELLWILLIAMS.COM </span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="[columbia-logo.png]">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo.png">
 
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
@@ -47,7 +47,7 @@
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony-logo.png">
       </div>
     </div>
   </body>
